# mqtt-alert

./: .gitignore  Cargo.toml  README.md  config.toml.example
.github/workflows/: clippy.yml  rustfmt.yml
src/: cli.rs  config.rs  main.rs  notify.rs
